# scratch-pad

./: .env.example  .gitignore  CHANGELOG.md  CLI_USAGE.md  CONTRIBUTING.md  CROSS_PLATFORM_BUILD.md  LICENSE  PKGBUILD  PKGBUILD-bin  PKGBUILD-git  PLUGIN_SYSTEM.md  README.md  SECURITY.md  SESSION_20_CONTINUATION.md  SESSION_45_REACT_19_ROOT_CAUSE_PLAN.md  TEST_REGRESSION_ANALYSIS.md  check_tests.sh  eslint.config.js  index.html  package-lock.json  package.json  performance-config.json  pnpm-lock.yaml  tailwind.config.js  test-ci.md  test-results-final.txt  test-results.txt  test-results2.txt  tsconfig.ci.json  vite.config.ts  vitest.ci.config.emergency.ts  vitest.ci.config.ts  vitest.ci.fixed.config.ts  vitest.ci.simple.config.ts  vitest.config.ts  vitest.minimal.config.ts  vitest.performance.config.ts  vitest.sharding.config.ts  vitest.stable.config.ts
src-tauri/: Cargo.toml  INTEGRATION_TESTS.md  cargo-test-parallel.sh  deny.toml  scratch-pad.desktop  scratch_pad.db  tauri.conf.json  test_database_isolation.sh  test_integration.ps1  test_integration.sh  test_null_bytes.rs
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_settings.sql  003_fts.sql  004_note_format.sql  005_indices.sql
src-tauri/scripts/: setup-dev.sh  validate-workflows.sh
src-tauri/src/: cli.rs  database.rs  error.rs  global_shortcut.rs  ipc_tests.rs  lib.rs  main.rs  models.rs  plugin.rs  plugin_integration_test.rs  search.rs  security_tests.rs  settings.rs  shutdown.rs  validation.rs  window_manager.rs
src-tauri/src/commands/: diagnostics.rs  lifecycle.rs  mod.rs  (+6 more)
src-tauri/tests/: cross_platform_tests.rs  integration_tests.rs  ipc_integration_tests.rs  mod.rs  security_test_suite.rs  validation_unit_tests.rs  window_management_tests.rs
(+205 files in other folders)
