[package]
name = "scratch-pad"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scratch_pad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
fuzzy-matcher = "0.3"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
# Security validation dependencies
regex = "1.10"
dirs = "5.0"
# Trait-based service architecture
async-trait = "0.1"
# Performance monitoring dependencies
hostname = "0.4"
num_cpus = "1.0"
rand = "0.8"
sysinfo = "0.37.0"
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.12"

[[test]]
name = "integration"
path = "tests/mod.rs"

# Performance optimizations for release builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1 # Some optimization for faster dev builds
